fix align-items in ps_plus/ps_now section

--- a/css/style.css
+++ b/css/style.css
@@ -148,4 +148,11 @@ vertical-align: middle;
     height: 60px;
 }
 
+/* SOCIAL */
+.social_box{
+    width: 120px;
+    height: 120px;
+    display: inline-block;
+}
+  
 
